--- a/app/design/frontend/default/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/list.phtml
@@ -39,6 +39,9 @@
 <!--  -->
     <!--  -->
     <div class="club_login">
+        <div class="club_tit ">
+            <h2><?php echo $this->__("Point<br />Exchange")?></h2>
+        </div>
         <div class="club_ecoupon_center cs-clear">
             <?php echo $this->getChildHtml("lily_product_nav")?>
             <div class="club_ecoupon_com club_point">
