--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -24,7 +24,7 @@ address {font-style: normal;}
 .club_login_regbtn{display: block;background: #000;color:#fff;width: 194px;height: 48px;line-height: 48px;margin:60px auto 20px;text-align: center;}
 .club_login_regtxt{text-align: center;}
 .club_login_form{}
-.club_login_ipt{float: left;width: 150px;height: 40px;border:#000 solid 1px;padding:0 16px;display: inline;margin: 0 20px 0 0;font-size: 14px;color:#000;font-family:arial;background: #f3dedd}
+.club_login_ipt{float: left;width: 150px;height: 25px;border:#000 solid 1px;padding:0 16px;display: inline;margin: 0 20px 0 0;font-size: 14px;color:#000;font-family:arial;background: #f3dedd}
 .club_login_sub{width: 130px;height: 48px;border:#000 solid 1px;color:#fff;background: #000!important;display: block;margin: 20px 0 0 120px;font-size: 14px;}
 .club_login_formlink{width: 148px;float: left;display: inline;margin: 10px 0 0 42px}
 .club_login_wrap {width:1000px;margin:0 auto;}
@@ -33,6 +33,7 @@ address {font-style: normal;}
 .club_login_left {float:left;}
 .club_login_right {float:right;width:370px;}
 .product-essential {padding:0!important;}
+.validation-advice {margin:3px 0 0 130px;}
 
 .page_club .cart,.page_club .points_checkout {float:left;width:861px;}
 
@@ -46,22 +47,24 @@ address {font-style: normal;}
 .club_member_form{width: 530px;margin: 100px auto}
 .club_member_form .validation-advice {display: none;}
 .club_member_sub{font-size:18px;cursor:pointer;width: 131px;height: 35px;border:#000 solid 1px;color:#fff;background: #000;display: inline;margin: 30px auto;display: block;}
-.club_member_sub2 {margin:0;width:auto;padding:0;height:32px;background: none;border:none;border-bottom:2px solid #000;color:#000;}
+.club_member_sub2 {font-size:14px;margin:0;width:auto;padding:0;height:32px;background: none;border:none;border-bottom:2px solid #000;color:#000;}
 .club_member_sub:hover {opacity:0.8}
 .club_memberreg{width: 800px;margin: 30px auto 0 auto}
-.club_memberreg_fi{margin: 0 0 10px }
-.club_memberreg_fi label {float:left;width:120px;margin:4px 15px 0 0;color:#000;text-align:right;}
+.club_memberreg_fi{margin: 0 0 30px }
+.club_memberreg_fi label {float:left;width:120px;margin:0 15px 0 0;font-size:18px;color:#000;text-align:right;}
 .club_memberreg_edm {padding:0 0 0 131px;}
 .club_memberreg_fi .club_login_ipt{margin:0 auto;display:inline-block;float:none;}
 .club_memberreg_fi .club_login_ipt_short {width:80px;}
 .club_memberreg_fi{position: relative;}
-.club_memberreg_tips{position: absolute;left:350px;line-height: 48px;top:0;width:350px;color:#000;}
+.club_memberreg_tips{position: absolute;left:350px;line-height: 25px;top:0;width:350px;color:#000;}
 .club_memberreg_tips_password {width:600px;}
 .club_memberreg_seltxt{width: 200px;height: 46px;border:#000 solid 1px;padding:0 16px;margin: 0 auto;color:#000;font-family:arial;background: #f3dedd;line-height: 46px;background: url('../images/club_memberreg_sel.png') no-repeat 94% 50%;}
 .club_memberreg_sel{position: absolute;width: 232px;height: 46px;display: block;top: 1px;left:38px;opacity: 0;filter:alpha(opacity=0);cursor: pointer;}
 .club_member_forget{width: 308px;margin: 0 auto 0 auto;text-align:center;}
 .club_member_forget .club_memberreg_fi {margin-top:20px;}
 .club_member_forget .fieldset {margin:0;padding:0;}
+.club_memberreg_fi_address {font-size:18px;}
+.club_memberreg_fi_address .validation-advice {display:none;}
 .club-rule-content .club_login_txt {width:500px;margin:0 auto;text-align: center;}
 /**/
 .club_member_rule{text-align: center;margin: 0 auto;width: 860px}
@@ -128,7 +131,7 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 .club_meminfolist1 li{width: 420px;overflow: hidden;float: left;padding-bottom: 30px}
 .club_meminfolist2 li{width: 300px;overflow: hidden;float: left;padding-bottom: 30px}
 .club_meminfolist li span{float: left;width: 120px;}
-.club_meminfolist li strong{float: left;width: 198px;}
+.club_meminfolist li strong{float: left;width: 198px;word-break:break-all;word-wrap:break-word;}
 .club_meminfolist li span.edit {width:auto;border-bottom:2px solid #000;font-weight: bold;}
 .club_meminfolist input {background:none;border:1px solid #000;padding:4px;}
 .club_meminfolist button {background:#000;color:#fff;border:none;padding:4px;}
@@ -231,6 +234,7 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 .cms-points h2 {font-size:24px;margin-bottom:40px;}
 .club_article_center h4 {font-size:24px;margin-top:30px;margin-bottom:20px;}
 .club_article_center p {margin:0;}
+.jiathis_style .jtico {background:none!important;}
 /* Mobile Used
 ================================================================================================= */
 .dis_mobile { display: none }
