--- a/app/design/frontend/base/default/layout/points.xml
+++ b/app/design/frontend/base/default/layout/points.xml
@@ -46,7 +46,7 @@
       <block type="points/checkout" name="points_index" template="points/checkout.phtml">
 		 <block type="points/shipping" name="points_shipping" as="points_shipping" template="points/shipping.phtml" />
 		 <block type="points/review" name="points_review" as="points_review" template="points/checkout_review.phtml" />
-		 <block type="core/template" name="lily_customer_nav_block" as="lily_customer_nav" template="page/html/lily_customer_nav.phtml" />
+		 <block type="core/template" name="lily_product_nav_block" as="lily_product_nav" template="page/html/lily_product_nav.phtml" />
 	  </block>
     </reference> 
   </points_checkout_index>
