--- a/app/design/frontend/base/default/template/points/order/history.phtml
+++ b/app/design/frontend/base/default/template/points/order/history.phtml
@@ -79,7 +79,7 @@
                 </tbody>
             </table>
             <script type="text/javascript">decorateTable('my-orders-table');</script>
-            <?php echo $this->getPagerHtml(); ?>
+<!--            --><?php //echo $this->getPagerHtml(); ?>
             <?php else: ?>
                 <p><?php echo $this->__('You have placed no orders.'); ?></p>
             <?php endif ?>
