--- a/app/design/frontend/default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/view.phtml
@@ -123,6 +123,7 @@
                         <div class="jiathis_style">
                             <a class="jiathis_button_tsina"><img src="<?php echo $this->getSkinUrl('images/sina-icon.png') ?>"/></a>
                             <a class="jiathis_button_email"><img src="<?php echo $this->getSkinUrl('images/mail-to.png') ?>"/></a>
+                                <a class="jiathis_button_tqq"><img src="<?php echo $this->getSkinUrl('images/qq-icon.png') ?>"/></a>
                         </div>
                         <script type="text/javascript" >
                             var jiathis_config={
