--- a/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
+++ b/app/design/frontend/default/default/template/page/html/lily_product_nav.phtml
@@ -6,13 +6,12 @@
 <?php  if (Mage::getSingleton("customer/session")->isLoggedIn()): ?>
     <div class="club_ecoupon_nav from-block">
         <div class="club_welcome">
-            <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?>,<br/> <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
+            <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?>, <?php echo $this->__("Hi")?><br/> <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
         </div>
         <a class="club_logout" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
         <div class="club_navlist">
             <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("customer/account/edit/") ? "active": "" ?>" href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("My Account")?></a>
             <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("wishlist") ? "active": "" ?>" href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
-            <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("giftproducts.html") ? "active": "" ?>" href="<?php echo $this->getUrl("giftproducts.html")?>"><?php echo $this->__("Gift Exchange")?></a>
             <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("checkout/cart") ? "active": "" ?>" href="<?php echo $this->getUrl("checkout/cart")?>"><?php echo $this->__("Giftcard")?> <span class="num">(<?php echo count($items)?>)</span></a>
         </div>
         <div class="club_opening_time">
@@ -29,7 +28,6 @@
         <div class="club_navlist_m">
             <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("customer/account/edit/") ? "active": "" ?>" href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("My Account")?></a>
             <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("wishlist") ? "active": "" ?>" href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
-            <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("giftproducts.html") ? "active": "" ?>" href="<?php echo $this->getUrl("giftproducts.html")?>"><?php echo $this->__("Gift Exchange")?></a>
             <a class="<?php echo Mage::helper('core/url')->getCurrentUrl() ==  $this->getUrl("checkout/cart") ? "active": "" ?>" href="<?php echo $this->getUrl("checkout/cart")?>"><?php echo $this->__("Giftcard")?> <span class="num">(<?php echo count($items)?>)</span></a>
             <a class="club_logout_m" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
         </div>
