--- a/skin/frontend/default/default/css/styles.css
+++ b/skin/frontend/default/default/css/styles.css
@@ -1710,7 +1710,8 @@ color:#fff;
 .product-collateral h2 { font-weight:bold; font-size:15px; color:#e26703; border-bottom:1px solid #e5dcc3; padding:0 0 1px; margin:0 0 15px; }
 .product-collateral .box-collateral { margin:0 0 25px; }
 .jiathis_txt.jiathis_separator.jtico.jtico_email,
-.jiathis_txt.jiathis_separator.jtico.jtico_tsina
+.jiathis_txt.jiathis_separator.jtico.jtico_tsina,
+.jiathis_txt.jiathis_separator.jtico.jtico_tqq
 {     height: 18px !important;
     margin: 6px 0 !important;
     padding: 0 !important;
