--- a/app/design/frontend/base/default/template/points/checkout.phtml
+++ b/app/design/frontend/base/default/template/points/checkout.phtml
@@ -1,6 +1,6 @@
 <div class="product-essential club_ecoupon_center cs-clear">
 
-	<?php echo $this->getChildHtml("lily_customer_nav")?>
+	<?php echo $this->getChildHtml("lily_product_nav")?>
 
 	 <div class="cart product-essential">
 		<div class="form-before">
@@ -26,7 +26,7 @@
 	                            </div>
 	                        </li>
 							<li>
-	                            <label for="order_place_tel" class="required"><em>*</em><?php echo $this->__('Cell phone') ?></label>
+	                            <label for="order_place_tel" class="required"><em>*</em><?php echo $this->__('Mobile') ?>：</label>
 	                            <div class="input-box">
 	                                <input type="text" name="order_place_tel" class="input-text required-entry" value="" id="order_place_tel" title="<?php echo $this->__('Telpone') ?>" />
 	                            </div>
