--- a/app/design/frontend/default/default/template/sales/order/view.phtml
+++ b/app/design/frontend/default/default/template/sales/order/view.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <div class="club_ecoupon_center cs-clear">
-    <?php echo $this->getChildHtml("lily_customer_nav")?>
+    <?php echo $this->getChildHtml("lily_product_nav")?>
 
     <div class="club_ecoupon_com">
         <div class="orderinfo"><?php echo $this->getChildHtml("info")?></div>
