--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -100,7 +100,7 @@
                     <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Birthday') ?>: </label>
                             <input type="text" name="dob" id="birth" value="" title="<?php echo $this->__('Birthday') ?>" class="club_login_ipt required-entry" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('e.g: 19850101')?></span>
+                            <span class="club_memberreg_tips"><?php echo $this->__('e.g: 1985/01/01')?></span>
                         </div>
 
 
