--- a/app/design/frontend/default/default/template/customer/widget/gender.phtml
+++ b/app/design/frontend/default/default/template/customer/widget/gender.phtml
@@ -25,10 +25,12 @@
  */
 ?>
 
-
-<?php $options = Mage::getResourceSingleton('customer/customer')->getAttribute('gender')->getSource()->getAllOptions();?>
-<?php $value = $this->getGender();?>
-
-<?php foreach ($options as $option):?>
-	<?php if ($option['value'] == $value) echo __($option["label"]);?>
-<?php endforeach;?>
+<div class="input-box">
+    <select id="<?php echo $this->getFieldId('gender')?>" name="<?php echo $this->getFieldName('gender')?>" title="<?php echo $this->__('Gender') ?>"<?php if ($this->isRequired()):?> class="validate-select"<?php endif; ?> <?php echo $this->getFieldParams() ?>>
+        <?php $options = Mage::getResourceSingleton('customer/customer')->getAttribute('gender')->getSource()->getAllOptions();?>
+        <?php $value = $this->getGender();?>
+        <?php foreach ($options as $option):?>
+            <option value="<?php echo $option['value'] ?>"<?php if ($option['value'] == $value) echo ' selected="selected"' ?>><?php echo $this->__($option['label']) ?></option>
+        <?php endforeach;?>
+    </select>
+</div>
