--- a/skin/frontend/default/default/css/styles.css
+++ b/skin/frontend/default/default/css/styles.css
@@ -4071,3 +4071,5 @@ span.big{font-size:25px;font-weight:bold;}
 .category-trend2014summer .street-style6.trend4.street-style {
     height: 674px;
 }
+
+.customer-password-form .validation-advice {display:none;}
