--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -4,6 +4,9 @@
 
 /**/
 * {max-height: 5000em;}
+* {outline: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
+textarea,input {-webkit-user-select: text;-khtml-user-select: text;-moz-user-select: text;-ms-user-select: text;user-select: text;}
+
 address {font-style: normal;}
 .club{background: #f3dedd;}
 .page_club{padding: 120px 0 50px 0;background: #f3dedd;font-size:14px;}
