--- a/app/design/frontend/default/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/default/default/template/customer/account/dashboard.phtml
@@ -36,9 +36,9 @@
         </div>
         <!-- <p class="club_ecoupon_txt">For system reason,  E coupon information will be synchronized after 24 hours later. </p> -->
         <div class="club_ecoupon_center cs-clear">
+    
 
-
-            <?php echo $this->getChildHtml("lily_customer_nav")?>
+            <?php echo $this->getChildHtml("lily_product_nav")?>
 
             <div class="club_ecoupon_com club_meminfo">
                 <div class="club_meminfolist cs-clear" >
