--- a/app/design/frontend/default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/default/default/template/customer/form/edit.phtml
@@ -81,10 +81,12 @@
                     <p><?php echo $this->__("Change password")?></p>
                     <div class="club_meminpwform">
                         <form action="<?php echo $this->getUrl('customer/account/editPost') ?>" method="post" class="customer-password-form" id="form-validate">
+                            <?php echo $this->getBlockHtml('formkey')?>
                             <div class="cs-clear">
                                 <input type="password" class="required-entry" name="current_password" id="current_password"  placeholder="<?php echo $this->__("Current password*")?>" />
                                 <input type="password" class="required-entry" name="password" id="password" placeholder="<?php echo $this->__("New password*")?>" />
                                 <input type="password" class="required-entry" name="confirmation" id="confirmation"  placeholder="<?php echo $this->__("Confirm new password*")?>" />
+                                <input type="hidden" name="change_password" value="1" />
                             </div>
                             <input type="submit" value="<?php echo $this->__("Save")?>" class="club_meminpwsub" />
                         </form>
